overflow fixed

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -271,6 +271,9 @@ header{
         end: 0;
     };
 
+    overflow-x: hidden;
+    overflow-inline: hidden;
+    
     background: #fff
 }
 
